[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/game_node2d.gd" type="Script" id=1]
[ext_resource path="res://sprites/right_pallete.png" type="Texture" id=2]
[ext_resource path="res://sprites/left_pallete.png" type="Texture" id=3]
[ext_resource path="res://sprites/ball.png" type="Texture" id=4]

[node name="GameNode2D" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerLeftSprite" type="Sprite" parent="."]
position = Vector2( 67, 183 )
texture = ExtResource( 3 )

[node name="PlayerRightSprite" type="Sprite" parent="."]
position = Vector2( 577, 187 )
texture = ExtResource( 2 )

[node name="BallSprite" type="Sprite" parent="."]
position = Vector2( 320, 188 )
texture = ExtResource( 4 )
